@startuml

!include.ClassDiagram.config

left to right direction

class Parser {
    - logger: Logger
    - scanner: Scanner
    - mapperUI: UI
    + getUserInput(): String
    + processUserInput(userInput: String, storage: Storage): void
}

class UI {
    + displayExitMessage(): void
}

class FilterCoursesCommand {
    + execute(input: String): void
}

class ListSchoolCommand {
    + execute(input: String): void
}

class ListCommandsCommand {
    + execute(input: String): void
}

class HelpCommand {
    + execute(input: String): void
}

class ListUniCoursesCommand {
    + execute(input: String): void
    }

class ObtainContactsCommand {
    + execute(input: String): void
    }

Parser --> UI : "1"
Parser ..> FilterCoursesCommand : "0..1"
Parser ..> ListSchoolCommand : "0..1"
Parser ..> ListCommandsCommand : "0..1"
Parser ..> HelpCommand : "0..1"
Parser ..> ObtainContactsCommand : "0..1"
Parser ..> ListUniCoursesCommand : "0..1"

@enduml